--- a/language/resource.language.es_es/strings.po
+++ b/language/resource.language.es_es/strings.po
@@ -150,7 +150,7 @@ msgstr "Edite los widgets utilizados en la ventana de búsqueda."
 
 msgctxt "#31028"
 msgid "Outline"
-msgstr "Contorno"
+msgstr "Sinopsis"
 
 #: /1080i/Includes_Items.xml
 msgctxt "#31029"
@@ -178,11 +178,11 @@ msgstr "Gente"
 
 msgctxt "#31034"
 msgid "Cast member"
-msgstr "Miembro del reparto"
+msgstr "Miembros del reparto"
 
 msgctxt "#31035"
 msgid "Crew member"
-msgstr "Miembro del Equipo"
+msgstr "Miembros del Equipo"
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31036"
@@ -197,12 +197,12 @@ msgstr "Complejo"
 #: /1080i/Includes_Labels.xml
 msgctxt "#31038"
 msgid "Directing"
-msgstr "Dirigiendo"
+msgstr "Direccion"
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31039"
 msgid "Writing"
-msgstr "Escribiendo"
+msgstr "Guión"
 
 msgctxt "#31040"
 msgid "Use as widget"
@@ -332,7 +332,7 @@ msgstr "Descubrir"
 #: /1080i/Includes_Labels.xml
 msgctxt "#31067"
 msgid "Cinematography"
-msgstr "Cinematografía"
+msgstr "Fotografia"
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31068"
@@ -962,6 +962,11 @@ msgctxt "#31200"
 msgid "Added on"
 msgstr "Añadido el"
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31201"
+msgid "Seekbar displays title details while seeking"
+msgstr "Seekbar muestra los detalles del título mientras se busca"
+
 msgctxt "#31202"
 msgid "Ratings"
 msgstr "Clasificaciones"
@@ -1311,9 +1316,19 @@ msgctxt "#31277"
 msgid "Ensure that your device has an alternative mode of accessing the menu and settings before selecting this option."
 msgstr "Asegúrese de que su dispositivo tenga un modo alternativo para acceder al menú y la configuración antes de seleccionar esta opción."
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31278"
+msgid "Expand info panel"
+msgstr "Ampliar panel de información"
+
 msgctxt "#31279"
 msgid "Studio icons"
 msgstr "Iconos del estudio"
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31280"
+msgid "hides left header"
+msgstr "oculta el encabezado izquierdo"
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31281"
@@ -1406,6 +1421,11 @@ msgctxt "#31300"
 msgid "Customise window background"
 msgstr "Personalizar fondo de ventana"
 
+#: /1080i/Includes_Labels.xml
+msgctxt "#31301"
+msgid "Press down for crew"
+msgstr "Presione hacia abajo para equipo de rodaje"
+
 msgctxt "#31302"
 msgid "Management options"
 msgstr "Gestión de las opciones"
@@ -1414,6 +1434,21 @@ msgstr "Gestión de las opciones"
 msgctxt "#31303"
 msgid "Customise fallback image folder"
 msgstr "Personalizar la carpeta de imágenes de reserva"
+
+#: /1080i/Includes_Search.xml
+msgctxt "#31304"
+msgid "lists"
+msgstr "listados"
+
+#: /1080i/Custom_1115_Dialog_Shortcuts_Window.xml
+msgctxt "#31305"
+msgid "Detailed adds an information panel."
+msgstr "Detallado añade un panel de información."
+
+#: /1080i/Custom_1115_Dialog_Shortcuts_Window.xml
+msgctxt "#31306"
+msgid "Advanced adds categories and spotlights."
+msgstr "Avanzado añade categorías y focos."
 
 #: /1080i/Includes_DialogInfo.xml
 msgctxt "#31307"
@@ -1449,6 +1484,21 @@ msgstr "Gira"
 msgctxt "#31313"
 msgid "Always visible"
 msgstr "Siempre visible"
+
+#: /1080i/Custom_1115_Dialog_Shortcuts_Window.xml
+msgctxt "#31314"
+msgid "Advanced mode is only available in horizontal hub windows."
+msgstr "El modo avanzado sólo está disponible en las ventanas centrales horizontales."
+
+#: /1080i/Custom_1115_Dialog_Shortcuts_Window.xml
+msgctxt "#31315"
+msgid "Hub windows other than classic home may not have access to the settings window in their default configuration."
+msgstr "Es posible que las ventanas Hub que no sean classic home no tengan acceso a la ventana de ajustes en su configuración por defecto."
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31316"
+msgid "Dark glass"
+msgstr "Cristal oscuro"
 
 #: /1080i/Includes_MediaFilter.xml
 msgctxt "#31319"
@@ -2147,7 +2197,7 @@ msgstr "Minimizar menú"
 #: /1080i/Includes_Labels.xml
 msgctxt "#31498"
 msgid "Released"
-msgstr "Publicado"
+msgstr "Estrenado"
 
 #: /1080i/Includes_Labels.xml
 msgctxt "#31499"
